--- a/back_nappipeli/package.json
+++ b/back_nappipeli/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.10"
+    "mongoose": "^5.4.10",
+    "pusher": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
