--- a/front_nappipeli/package.json
+++ b/front_nappipeli/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "bootstrap": "^4.2.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^16.8.0",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.0",
     "react-redux": "^6.0.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
