--- a/back_nappipeli/package.json
+++ b/back_nappipeli/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.10",
-    "pusher": "^2.2.0"
+    "pusher": "^2.2.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
