--- a/front_nappipeli/package.json
+++ b/front_nappipeli/package.json
@@ -16,7 +16,8 @@
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
